--- a/package.json
+++ b/package.json
@@ -1,45 +1,43 @@
 {
-  "name": "admin-portfolio",
+  "name": "portfolio-vue",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "Maria Tarasenko <mariaatarasenko@gmail.com>",
-  "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "simple-vue-validator": "^0.14.2",
-    "vue": "^2.5.11",
-    "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "simple-vue-validator": "^0.14.0",
+    "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "eslint": "^4.7.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-vue": "^4.0.1",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.7.2",
-    "pug": "^2.0.0-rc.4",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
-    "style-loader": "^0.19.1",
+    "eslint-plugin-vue": "^2.1.0",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.5.0",
+    "pug": "^2.0.0-rc.3",
+    "sass-loader": "^5.0.1",
+    "sass-resources-loader": "^1.3.0",
+    "style-loader": "^0.18.2",
     "svg-fill-loader": "0.0.8",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "url-loader": "^0.5.9",
+    "vue-loader": "^12.1.0",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
